[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Paul <paul@paul-mayer.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
gitlab-api = "0.6"