[package]
authors = ["Paul <paul@paul-mayer.eu>"]
edition = "2018"
name = "hello-rust"
version = "0.1.0"

[dependencies]
async-graphql = "2.0"
async-std = {version = "1", features = ["attributes"]}
axum = "0.1.3"
futures = "0.3"
serde = "1.0.128"
serde_json = "1.0"
tokio = {version = "0.2", features = ["macros", "tcp", "dns", "io-util"]}
